...
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:orientation="vertical" style="@style/SunsetTimeWidget_dark"
            android:paddingLeft="?dialogPreferredPadding" android:paddingRight="?dialogPreferredPadding"
            android:paddingTop="0dp" android:paddingBottom="0dp"
            android:background="?attr/dialogBackground">

            <DatePicker android:id="@+id/appwidget_date_custom" android:theme="@style/DatePickerStyle"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:calendarViewShown="false" android:spinnersShown="true"
                android:datePickerMode="spinner" android:layout_gravity="center"
                tools:ignore="UnusedAttribute"/>

        </LinearLayout>
...

            <Button
                style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
                android:id="@+id/dialog_button_neutral"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/cardlabel_today" />

            <!--<View android:layout_width="0dp" android:layout_height="1dp" android:background="@null" android:layout_weight="1" />

            <Button
                style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
                android:id="@+id/dialog_button_cancel"
...
